# Fergenson_Lab_Backend

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  devenv.nix  flake.nix  gitignore  install_dependencies.sh  meson.build  meson_options.txt  result  treefmt.toml
.github/: main.yml
.github/workflows/: main.yml
include/openCV_f/: process_image.h
include/stateOfLab_s/: lab_component.h  state_of_lab.h
include/stateOfLab_s/components/: thermometer.h
libs/leptonica/leptonica/: INSTALL_RECEIPT.json  sbom.spdx.json
libs/tesseract/tesseract/: INSTALL_RECEIPT.json  sbom.spdx.json
nix/: default.nix  grpc.nix  liboai.nix  protobuf_29_2.nix
protos/: message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
src/openCV_s/: process_image.cpp
src/stateOfLab_s/: state_of_lab.cpp
src/websocket_s/: websocket_server.cpp
